Fix scrolling issues on Firefox (#3332)

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ body {
   display: none;
 }
 
+.hide-scrollbar {
+  scrollbar-width: none;
+}
+
 .ellipsis {
   overflow: hidden;
   text-overflow: ellipsis;
